clean code; enhance test; add module-info.java