@@ -6,7 +6,7 @@ import com.truthbean.debbie.boot.AbstractDebbieApplication;
 import com.truthbean.debbie.boot.DebbieApplication;
 import com.truthbean.debbie.mvc.filter.RouterFilterManager;
 import com.truthbean.debbie.mvc.router.MvcRouterRegister;
-import com.truthbean.debbie.properties.DebbieConfigurationFactory;
+import com.truthbean.debbie.properties.DebbieConfigurationCenter;
 import com.truthbean.debbie.server.AbstractWebServerApplicationFactory;
 import com.truthbean.debbie.server.session.SessionManager;
 import com.truthbean.debbie.server.session.SimpleSessionManager;
@@ -29,6 +29,9 @@ import java.lang.management.ManagementFactory;
 public class NettyServerApplicationFactory extends AbstractWebServerApplicationFactory {
 
     static {
+        // --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+        // -Dio.netty.tryReflectionSetAccessible=true
+        // --illegal-access=warn
         System.setProperty("io.netty.tryReflectionSetAccessible", "true");
     }
 
@@ -38,7 +41,7 @@ public class NettyServerApplicationFactory extends AbstractWebServerApplicationF
     }
 
     @Override
-    public DebbieApplication factory(DebbieConfigurationFactory factory, DebbieApplicationContext applicationContext,
+    public DebbieApplication factory(DebbieConfigurationCenter factory, DebbieApplicationContext applicationContext,
                                      ClassLoader classLoader) {
         NettyConfiguration configuration = factory.factory(NettyConfiguration.class, applicationContext);
         BeanInitialization beanInitialization = applicationContext.getBeanInitialization();
